# ai-assistant-backen

./: .gitignore  Makefile  README.md  assistant_contex.txt  pyproject.toml
langchain_engine/: __init__.py  __main__.py  handler.py
